--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tarkov-quest-items"
+name = "tarkov-task-items"
 version = "0.0.0"
 description = "A Tauri App"
 authors = ["you"]
@@ -18,6 +18,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0.48"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
+reqwest = { version = "0.11.23", features = ["json"] }
+tokio = { version = "1.35.1", features = ["macros"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
