--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ tauri = { version = "1.5", features = [
     "fs-rename-file",
     "fs-read-dir",
     "shell-open",
+    "system-tray",
 ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
