--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-window": "^1.8.10",
-        "sass": "^1.69.7"
+        "sass": "^1.69.7",
+        "tauri-plugin-fs-watch-api": "github:tauri-apps/tauri-plugin-fs-watch#v1"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^1.5.6",
